# i-am-the-best-investor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.md  docker-compose.yml  favorites.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: README.md  deploy.sh  stock-bot.service
docs/: buy_decision_criteria.md
src/analysis/: __init__.py  llm_analyzer.py  price_predictor.py
src/data/: __init__.py  article_extractor.py  chart_generator.py  news_fetcher.py  stock_screener.py  stock_search.py
src/scheduler/: __init__.py  daily_job.py  routines.py
src/tests/: conftest.py  test_favorites.py  test_infra.py  test_kis_client.py  test_kis_client_extended.py  test_momentum.py  test_momentum_extended.py  test_multi_account.py  test_prediction.py
src/trading/: __init__.py  kis_client.py  momentum.py
src/utils/: __init__.py  config.py  discord_bot.py  favorites.py  logger.py  state.py
tests/: benchmark_chronos.py
